# Pascal-S-Compiler

./: .gitignore  .parser.output.icloud  .parser.tab.c.icloud  CMakeCache.txt  CMakeLists.txt  Makefile  Pascal_S_Compiler  Pascal_S_Complier  README.md  cmake_install.cmake  main  main.cpp  parser.output  parser.tab 2.c  parser.tab.c
docs/: 语法语义-目标代码接口.md
docs/img/: Readme.md
docs/interim-report/: report.md  文法目标代码对应关系.xlsx
docs/reference/: reference_links.md
parser/: DataType.cc  DataType.h  IdTable.cpp  IdTable.h  IdType.cpp  IdType.h  Makefile  NonToken.h  NonToken_old.cpp  NonToken_old.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  Symbol_old.cpp  Symbol_old.h  Token_old.cpp  Token_old.h  TypeCoder.cpp  TypeCoder.h  debug.cpp  debug.h  out.c  parser.cpp  parser.dot  parser.output  parser.tab.h  parser.y
scanner/: build.sh  cleanup.sh  gcd.pas  lex.yy.c  run.sh  scanner.l  scanner_only.l  scanner_only_out  scanner_out  start.sh
scanner 2/: README.md  scanner.cpp
scanner/test/FunctionalTest/: KeywordTest.pas  LexerErrorTest.pas  basicTypeTest.pas  builtInTest.pas  commentTest.pas  identifierTest.pas
scanner/test/IntegralTest/: gcd.pas  helloWorld.pas
scanner_only/: scanner.l  scanner_out  start.sh
test/: array_e.pas  const_e.pas  gcd  gcd.pas  id_test.pas  idlist_e.pas  operaion_test.pas  param_e.pas  pro_call_e.pas  qs-origin.pas  quick_sort.pas  quick_sort_swap.pas  test_id_table  test_id_table.sh  test_symbol_table  test_symbol_table.cc  test_symbol_table.cpp  var_fucntion.pas
test/output/: Readme.md
test/script/: Readme.md  negative-test.py  positive-test.py
test/test-cases/negative/: array-errors.pas  array_errors.pas  block-errors.pas  block_errors.pas  const_errors.pas  id_errors.pas  if-errors.pas  lexical-errors.pas  lexical_errors.pas  lvalue_errors.pas  operation-errors.pas  operation_errors.pas  type-errors.pas  type_errors.pas  undeclared-id.pas
test/test-cases/positive/: declarations.pas  gcd.pas  quick-sort.pas  quick_sort.pas  var_procedure.pas
